--- a/SlotMachineGame/app/src/main/AndroidManifest.xml
+++ b/SlotMachineGame/app/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
     android:versionCode="2"
     android:versionName="1.1" >
 
-    <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="15" />
+    <uses-sdk android:targetSdkVersion="15" />
 
     <application
         android:icon="@drawable/icon"
